--- a/index.html
+++ b/index.html
@@ -35,7 +35,24 @@
         </nav>
 
     </header>
-    
+    <main>
+    <section class="hero">
+            <div class="hero-circle">
+                <button id="new-btn">NEW</button>
+                <img src="/assets/hero-circle.png" alt="">
+                <img id="micro" src="/assets/microphone.png" alt="">
+            </div>
+            <div class="hero-content">
+                <h1>TechWave</h1>
+                <p>Your daily dose of tech insights, productivity hacks, and personal growth</p>
+                <div class="hero-btn">
+                    <button class="btn-1" ><i style="color: #fffcfc;" class="fa-brands fa-spotify"></i>  Listen on Spotify</button>
+                    <button class="btn-2"><i style="color: #00FF88;" class="fa-regular fa-envelope"></i> Subscribe</button>
+                </div>
+            </div>
+        </section>
+
+    </main>
     
 </body>
 </html>
