--- a/index.html
+++ b/index.html
@@ -52,6 +52,23 @@
             </div>
         </section>
 
+
+      <section class="about">
+            <div class="layout-container">
+                <div class="about-heading">
+                    <h1>About the Podcast</h1>
+                    <p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology. <br>
+                        We break down complex topics into digestible insights, explore productivity strategies that
+                        actually
+                        work, <br>
+                        and share stories of personal growth from industry leaders. <br> <br>
+
+                        Join thousands of young professionals and tech enthusiasts who start their day with TechWave.
+                    </p>
+                </div>
+            </div>
+        </section>  
+
     </main>
     
 </body>
