--- a/index.html
+++ b/index.html
@@ -69,6 +69,41 @@
             </div>
         </section>  
 
+        <section class="episode">
+            <div id="episode-para" class="layout-container">
+                <div class="episode-card">
+                    <div style="display: flex; align-items: center;">
+                        <h2>150K</h2>
+                        <i class="fa-solid fa-plus"></i>
+                    </div>
+                    <p>Monthly Listeners</p>
+                </div>
+                <div class="episode-card">
+                    <div style="display: flex; align-items: center;">
+                        <h2>200K</h2>
+                        <i class="fa-solid fa-plus"></i>
+                    </div>
+                    <p>Episodes Published</p>
+                </div>
+                <div class="episode-card">
+
+                    <div style="display: flex; align-items: center;">
+                        <h2>4.9K </h2>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                    <p>Average Rating</p>
+
+                </div>
+                <div class="episode-card">
+                    <div style="display: flex; align-items: center;">
+                        <h2>50K</h2>
+                        <i class="fa-solid fa-plus"></i>
+                    </div>
+                    <p>Industry Experts</p>
+                </div>
+            </div>
+        </section>
+
     </main>
     
 </body>
