--- a/index.html
+++ b/index.html
@@ -160,6 +160,64 @@
             </div>
         </section>
 
+
+        <section class="feature-episode">
+            <div class="container">
+                <div class="feature-episodeheading">
+                    <h1>Featured Episodes</h1>
+                </div>
+                <div class="feature-episode-para">
+
+                    <div class="feature-episode-card">
+                        <iframe class="frame" style="border-top-right-radius: 20px; border-top-left-radius: 20px;"
+                            width="100%" height="50%"
+                           src="https://www.youtube.com/embed/-dC1omlXDA4?si=lh_8FVDrWuVBai3U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <div class="feature-content">
+                            <h2>The Future of AI in Everyday Life</h2>
+                            <p>Exploring how artificial intelligence is transforming our daily routines and what to
+                                expect in the next decade.</p>
+                            <div class="feature-episode-icon">
+                                <img src="./assets/clock.png">
+                                <p style="color: #00FF88;">42 min</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="feature-episode-card">
+                        <iframe
+                            style=" object-fit: contain; border-top-right-radius: 20px; border-top-left-radius: 20px;"
+                            width="100%" height="50%"
+                            src="https://www.youtube.com/embed/OTQqi17j5Qg?si=iUh4wP_P4MuXY-OV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <div class="feature-content">
+                            <h2>Building Better Habits for Remote Work</h2>
+                            <p>Practical strategies for staying productive and maintaining work-life balance in a remote
+                                environment.</p>
+                            <div class="feature-episode-icon">
+                                <img src="./assets/clock.png">
+                                <p style="color: #00FF88;">35 min</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="feature-episode-card">
+                        <iframe  style=" object-fit: contain; border-top-right-radius: 20px; border-top-left-radius: 20px;" width="100%" height="50%" src="https://www.youtube.com/embed/PJb_ZMbeGug?si=UiPt-HNSjla_x31m" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <div class="feature-content">
+                            <h2>Career Growth in Tech: A Roadmap</h2>
+                            <p>Expert advice on navigating your tech career from junior developer to senior leadership
+                                roles.</p>
+                            <div class="feature-episode-icon">
+                                <img src="./assets/clock.png">
+                                <p style="color: #00FF88;">51 min</p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+
+
+       
+
     </main>
     
 </body>
