--- a/index.html
+++ b/index.html
@@ -216,6 +216,30 @@
 
 
 
+          <section class="meet">
+             <div class="meet-heading">
+                    <h1>Meet the Host</h1>
+                </div>
+            <div id="meet-host" class="layout-container">
+                <div class="meet-para">
+                    <img style="width: 190px;" src="./assets/host.png">
+                    <div class="meet-content">
+                        <h2>Alex Kumar</h2>
+                        <p>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech
+                            industry for over 10 years, working with startups and Fortune 500 companies. Through
+                            TechWave, Alex shares insights from industry leaders and practical advice for anyone looking
+                            to grow in tech.</p>
+                        <div class="meet-icon">
+                            <i class="fa-brands fa-linkedin"></i>
+                            <i class="fa-brands fa-x-twitter"></i>
+                            <i class="fa-brands fa-instagram"></i>
+                            <i class="fa-brands fa-youtube"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
        
 
     </main>
