. added for images

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <section class="hero">
             <div class="hero-circle">
                 <button class="new-btn">NEW</button>
-                <img src="/assets/hero-circle.png" >
-                <img id="micro" src="/assets/microphone.png">
+                <img src="./assets/hero-circle.png" >
+                <img id="micro" src="./assets/microphone.png">
             </div>
             <div class="hero-content">
                 <h1>TechWave</h1>
